# hr-bot

./: .env.example  Dockerfile  bot.py  docker-compose.yml  pyproject.toml
